# Design-Patterns-Examples-CPP

./: CMakeLists.txt  README.md  main.cpp  ship.cpp  ship.h  transportation.cpp  transportation.h  transportationfactory.cpp  transportationfactory.h  truck.cpp  truck.h
